<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backroundlayoutthree">

    <Button
        android:id="@+id/buttonBack"
        style="@style/button_style1"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="636dp"
        android:text="@string/back"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="@+id/buttonRegister"
        app:layout_constraintStart_toStartOf="@+id/buttonRegister"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView2"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="266dp"
        android:backgroundTint="#64D2FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/editTextTextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="110dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editTextTextUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="180dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/username" />
    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/buttonRegister"
        style="@style/button_style1"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="126dp"
        android:layout_marginTop="566dp"
        android:layout_marginEnd="125dp"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>